<resources>
    <string name="app_name">Product List</string>

    <!--Util-->
    <string name="msg_network_connection_error">No Internet connection</string>
    <string name="msg_page_not_found">404 Page not found</string>
    <string name="msg_unknown_error">Unknown error</string>
    <string name="msg_bad_request">Bad request</string>
    <string name="msg_not_authorized">User not authorized</string>
    <string name="msg_connection_error">Connection error</string>
    <string name="msg_navigation_drawer_open">Open navigation drawer</string>
    <string name="msg_navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_some_error">Something went wrong, please try again</string>

    <!--Navigation drawer menu items-->
    <string name="text_product_list">Product List</string>
    <string name="text_about">About</string>
    <string name="text_logout">Logout</string>
    <string name="text_product_vp">Product viewPager</string>


    <string name="favorite">Favorite</string>
    <string name="text_four">Fourth item</string>
    <string name="text_five">Fifth item</string>
    <string name="text_six">Logout</string>
    <string name="text_welcome">Welcome to \'Start Template\' \nPlease, login with any fake credentials</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">NO INTERNET CONNECTION </string>

    <string name="edt_product_add_name">NAME</string>
    <string name="edt_product_add_price">PRICE</string>
    <string name="edt_product_add_desc">DESCRIPTION</string>

    <string name="btn_product_add">ADD</string>

    <string name="text_btn_auth_sign">Login</string>

    <string name="msg_edt_error_mail">Enter email</string>
    <string name="msg_edt_pass_error">Enter password</string>

    <string name="hint_tiet_auth_email">Email</string>
    <string name="hint_tiet_auth_pass">Password</string>

    <string name="add_product_name"> ADD PRODUCT</string>
    <string name="product_det">PRODUCT DETAIL</string>
    <string name="delete_product">Delete selected item?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="favorite_ic">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="text_added_new_product">Added new product</string>
    <string name="text_no_network">NO INTERNET CONNECTION</string>
    <string name="title_favorites">Favorites</string>


</resources>
